tests/ok/trait-object-supertrait-upcast.ari
trait BaseScore {
  fn base(self, bonus: i64) -> i64
}

trait ChildScore: BaseScore {
  fn child(self) -> i64
}

impl BaseScore for i64 {
  fn base(self, bonus: i64) -> i64 {
    self + bonus
  }
}

impl ChildScore for i64 {
  fn child(self) -> i64 {
    self * 2
  }
}

fn main() -> i64 {
  let child: dyn ChildScore = 7i64 as dyn ChildScore;
  let base: dyn BaseScore = child as dyn BaseScore;
  base.base(5)
}
